--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^19.0.7",
     "@vercel/build-utils": "^9.0.1",
     "@vercel/frameworks": "^3.4.0",
+    "@vercel/ncc": "^0.38.3",
     "@vercel/routing-utils": "^5.0.0",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
